--- a/public/css/index.css
+++ b/public/css/index.css
@@ -19,6 +19,11 @@ body {
     width: 50%;
 }
 
+.userInfoFont{
+    font-size: xx-large;
+    color: white;
+}
+
 .userArea {
     height: 100%;
     width: 50%;
