--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: black;
+    background-color: rgb(210, 210, 210);
     height: 100vh;
     width: 100vw;
     margin: 0;
