--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: black;
+    background-color: rgb(136, 136, 136);
     height: 100vh;
     width: 100vw;
     margin: 0;
@@ -19,14 +19,11 @@ body {
     width: 50%;
 }
 
-<<<<<<< HEAD
-=======
 .userInfoFont{
     font-size: xx-large;
     color: white;
 }
 
->>>>>>> 02c7deddcc8920aa8e45dd40a4a1bdca53e5bc9a
 .userArea {
     height: 100%;
     width: 50%;
@@ -61,4 +58,24 @@ body {
     cursor: pointer;
     color: red;
     float: right;
+}
+
+.aicontainer {
+    display: flex;
+    direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 50%;
+    width: 80%;
+}
+
+.imagecontainer {
+    
+    height: 500px;
+    width: 500px;
+}
+
+#result >img {
+    height: 100%;
+    width: 100%;
 }
