--- a/public/css/productDetails.css
+++ b/public/css/productDetails.css
@@ -55,8 +55,8 @@ body {
   display: block;
 }
 
-/* Create three equal columns that floats next to each other */
-.column {
+Create three equal columns that floats next to each other */
+ .column {
  
   float: left;
   width: 33.33%;
@@ -86,52 +86,86 @@ Clear floats after the columns
 }
 
 
-/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
+/*Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+ @media screen and (max-width: 600px) {
   .column {
     width: 100%;
     height: auto;
   }
 }
 
+.productsection {
+  height: 100%;
+  width: 100%;
+}  
 
 
-.row3 {
-  position: absolute;
-  left: -9999px;
+
+
+/* */
+#productDetails {
+  margin-left: 2%;
+  margin-right: 2%;
+  /* height: ;
+  width: auto; */
+  margin: 80px 0 ;
 }
 
-.row2 {
-  position: absolute;
-  left: -9999px;
+.product {
+  display: flex;
+  flex-direction: column;
 }
 
-.row4 {
-  position: absolute;
-  left: -9999px;
+.firstSection {
+  display: flex;
+  flex-direction: row;
 }
 
-.column:hover .row2 {
-  display: block;
-  left: 0;
+.description {
+  margin-top: 10%;
+  color: #6d757d;
 }
 
-.column:hover .row3 {
-  display: block;
-  left: 0;
+.productBtn {
+  display: flex;
+  flex-direction: column;
+  margin-left: 5%;
 }
 
-.column:hover .row4 {
-  display: block;
-  left: 0;
+.productId {
+  font-size: small;
+}
+.priceFont {
+  font-size: 40px;
 }
 
-.model {
-  position: absolute;
-  left: -9999px;
+.pickUp {
+  border: 1px solid #ffd8c2;
+  /* display: block; */
+  flex-direction: column;
+  margin-top: 40px;
+  margin-bottom: 10px;
+  padding: 10px 25px;
+  border-radius: 20px;
+  margin-right: 40px;
 }
 
-.ownBrandbtn:hover .model{
-  display: block;
-  left: 0;
+.pickUpLocation {
+  margin-bottom: 10%;
+}
+
+.addToCart .btn {
+  background-color: transparent;
+  color: #000000;
+  border: #ffd8c2 1px solid;
+  border-radius: 50px;
+  padding: 10px 26px;
+  transition: 0.3s background-color;
+  margin-top: 10px;
+  font-size: 18px;
+}
+
+.addToCart .btn:hover {
+  background-color: #ffd8c2;
+  color: #08192c;
 }
