--- a/public/css/productsFilter.css
+++ b/public/css/productsFilter.css
@@ -1,3 +1,7 @@
+.products-container {
+    overflow: scroll;
+    height: 100vh;
+}
 body {
     background-color: rgb(136, 136, 136);
     height: 100vh;
@@ -6,10 +10,10 @@ body {
     overflow: hidden;
     /* display: flex;
     flex-direction: column; */
-}
+ } 
 
 .firstSection {
-    height: 20%;
+    /* height: 20%; */
     width: 100%;
     display: flex;
 }
@@ -79,6 +83,10 @@ body {
     height: 100%;
     width: 100%;
 }
+/* .card{
+    width:296px ;
+    height:469px;
+} */
 
 .card-body .btn {
     background-color: transparent;
@@ -94,4 +102,72 @@ body {
   .card-body .btn:hover {
     background-color: #ffd8c2;
     color: #08192c;
+  } 
+/*product card*/
+  #third-section {
+    width:auto;
+    height: auto;
+    padding-bottom: 10%;
+  }
+  
+  img{
+    max-width: 100%;
+  }
+  
+  .gallery{
+    background-color: rgb(255, 255, 255);
+    /* padding: 0px 10%; */
+    margin-top: 30px;
+  }
+    
+  .gallery img{
+    background-color: rgb(251, 236, 228);
+    padding: 15px;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 0 15px rgba(0,0,0,0.3);
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  
+  #gallery-modal .modal-img{
+    width: 100%;
+  }
+  
+  
+  .quantity {
+    border: 1px solid black;
+    border-radius: 3px;
+    margin: 1px;
+    padding: 1px;
+  }
+  
+  .quantity-green {
+    background-color: #6cc971;
+    color: white;
+    border: transparent;
+    border-radius: 3px;
+    margin: 5px;
+    padding: 0 5px;
+  }
+  
+  
+  .quantity-red {
+    background-color: #ff6c6c;
+    color: white;
+    border: transparent;
+    border-radius: 3px;
+    margin: 5px;
+    padding: 0 5px;
+  
+  }
+  
+  .quantity-gray {
+    background-color: #a6a6a6;
+    color: white;
+    border: transparent;
+    border-radius: 3px;
+    margin: 5px;
+    padding: 0 5px;
+  
   }
