--- a/public/css/index.css
+++ b/public/css/index.css
@@ -101,6 +101,8 @@ body {
     padding: 10px;
     text-align: center;
     font-size: 16px;
+    display: flex;
+    justify-content:space-between
   }
   
   /* 聊天記錄區域 */
