--- a/public/css/productDetails.css
+++ b/public/css/productDetails.css
@@ -169,3 +169,14 @@ Clear floats after the columns
   background-color: #ffd8c2;
   color: #08192c;
 }
+
+#productDetails {
+  display: flex;
+  margin: 80px;
+}
+
+#productTitle {
+  font-size: 20px;
+  font-weight: bold;
+  color: #08192c;
+}
