--- a/public/css/index.css
+++ b/public/css/index.css
@@ -80,7 +80,7 @@ body {
     width: 100%;
 }
 
-/* 浮動聊天窗口 */
+/* Chat */
 #chatBox {
     display: none;
     position: fixed;
@@ -94,7 +94,7 @@ body {
     display: none; /* 默認隱藏 */
   }
   
-  /* 聊天窗口的標題 */
+  /* Chat的標題 */
   #chatBoxHeader {
     background-color: #007bff;
     color: white;
@@ -105,16 +105,21 @@ body {
     justify-content:space-between
   }
   
-  /* 聊天記錄區域 */
+  /* Chatting區域 */
   #chatBody {
     height: 300px;
     overflow-y: auto;
     padding: 10px;
     border-top: 1px solid #ccc; 
     border-bottom: 1px solid #ccc;
+    display: flex;
+    flex-direction: column;
+  }
+  #chatBody > div {
+    margin-bottom: 5px;
   }
   
-  /* 聊天輸入區域 */
+  /* Chat input區域 */
   #chatInput {
     width: calc(100% - 80px);
     padding: 10px;
@@ -122,7 +127,7 @@ body {
     border-top: 1px solid #ccc;
   }
   
-  /* 發送按鈕 */
+  /* Send btn */
   #sendBtn {
     width: 70px;
     padding: 10px;
@@ -132,7 +137,7 @@ body {
     cursor: pointer;
   }
   
-  /* 浮動按鈕 */
+  /* Toggle Btn */
   #chatToggleBtn {
     position: fixed;
     bottom: 10px;
