--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(136, 136, 136);
+    background-color: rgb(255, 255, 255);
     height: 100vh;
     width: 100vw;
     margin: 0;
@@ -21,7 +21,7 @@ body {
 
 .userInfoFont {
     font-size: xx-large;
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 .userArea {
