--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -57,17 +57,24 @@
     border-right:2px solid gray;
 }
 .productName {
-    flex: 0 0 40%;
+    flex: 0 0 30%;
     text-align: center;
 }
 .productModel {
     flex: 0 0 10%;
+    border-left: 2px solid gray;
     text-align: center;
 }
 .productColor {
     flex: 0 0 10%;
     text-align: center;
     border-left: 2px solid gray;
+    border-right:2px solid gray;
+}
+
+.productQuantity{
+    flex: 0 0 10%;
+    text-align: center;
     border-right:2px solid gray;
 }
 .productAction {
