--- a/public/css/index.css
+++ b/public/css/index.css
@@ -86,8 +86,8 @@ body {
     position: fixed;
     bottom: 80px; /* 留出空間給浮動按鈕 */
     right: 20px;
-    width: 400px;
-    height: 400px;
+    width: 50%;
+    height: 50%;
     border: 1px solid #ccc;
     background-color: #fff;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -107,7 +107,7 @@ body {
   
   /* Chatting區域 */
   #chatBody {
-    height: 300px;
+    height: 80%;
     overflow-y: auto;
     padding: 10px;
     border-top: 1px solid #ccc; 
