--- a/public/css/index.css
+++ b/public/css/index.css
@@ -308,14 +308,19 @@ h1 {
     background: rgba(0, 0, 0, 0.7);
     justify-content: center;
     align-items: center;
+    z-index: 999;
+    transition: opacity 0.3s ease, visibility 0.3s ease
 }
 
 .popup {
-    background: rgb(255, 255, 255);
-    padding: 20px;
-    border-radius: 5px;
-    width: 300px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+   position: relative;
+    background: #f8f9fa;
+    padding: 30px;
+    border-radius: 12px;
+    width: 350px;
+    max-width: 90%;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
 }
 
 .close-btn {
@@ -348,14 +353,15 @@ h1 {
 #chatBox {
     display: none;
     position: fixed;
-    bottom: 80px; /* 留出空間給浮動按鈕 */
+    bottom: 80px;
     right: 20px;
     width: 50%;
     height: 50%;
     border: 1px solid #ccc;
     background-color: #fff;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    display: none; /* 默認隱藏 */
+    display: none;
+    z-index: 1007;
   }
   
   /* Chat的標題 */
@@ -366,7 +372,8 @@ h1 {
     text-align: center;
     font-size: 16px;
     display: flex;
-    justify-content:space-between
+    justify-content:space-between;
+    z-index: 1006;
   }
   
   /* Chatting區域 */
@@ -378,9 +385,11 @@ h1 {
     border-bottom: 1px solid #ccc;
     display: flex;
     flex-direction: column;
+    z-index: 1005;
   }
   #chatBody > div {
     margin-bottom: 5px;
+    z-index: 1004;
   }
   
   /* Chat input區域 */
@@ -389,6 +398,7 @@ h1 {
     padding: 10px;
     border: none;
     border-top: 1px solid #ccc;
+    z-index: 1003;
   }
   
   /* Send btn */
@@ -399,6 +409,7 @@ h1 {
     color: white;
     border: none;
     cursor: pointer;
+    z-index: 1002;
   }
   
   /* Toggle Btn */
@@ -415,6 +426,7 @@ h1 {
     font-size: 16px;
     cursor: pointer;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 1001;
   }
   
   .chatMsg {
