--- a/public/css/productDetails.css
+++ b/public/css/productDetails.css
@@ -1,124 +1,28 @@
-* {
-  box-sizing: border-box;
+.products-container {
+  overflow: scroll;
+  height: 100vh;
 }
-
-body {
+/* body {
+  background-color: rgb(136, 136, 136);
+  height: 100vh;
+  width: 100vw;
   margin: 0;
-}
-
-.navbar {
   overflow: hidden;
-  background-color: #333;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.navbar a {
-  float: left;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font: inherit;
-  margin: 0;
-}
+  /* display: flex;
+  flex-direction: column; */
+/* }  */ 
 
 
-
-.dropdown-content {
+.overlay {
   display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  width: 100%;
+  position: fixed;
+  top: 0;
   left: 0;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-Create three equal columns that floats next to each other */
- .column {
- 
-  float: left;
-  width: 33.33%;
-  padding: 10px;
-  background-color: #ccc;
-  height: 250px;
-}
-
-.column a {
-  float: none;
-  color: black;
-  padding: 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.column a:hover {
-  background-color: #ddd;
-}
-
-Clear floats after the columns
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-
-/*Responsive layout - makes the three columns stack on top of each other instead of next to each other */
- @media screen and (max-width: 600px) {
-  .column {
-    width: 100%;
-    height: auto;
-  }
-}
-
-.productsection {
-  height: 100%;
   width: 100%;
-}  
-
-
-
-
-/* */
-#productDetails {
-  margin-left: 2%;
-  margin-right: 2%;
-  /* height: ;
-  width: auto; */
-  margin: 80px 0 ;
-}
-
-.product {
-  display: flex;
-  flex-direction: column;
-}
-
-.firstSection {
-  display: flex;
-  flex-direction: row;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  justify-content: center;
+  align-items: center;
 }
 
 .description {
@@ -180,3 +84,111 @@ Clear floats after the columns
   font-weight: bold;
   color: #08192c;
 }
+
+/* navbar */
+
+#navbarhead {
+  border-radius: 35px;
+  margin: 5px;
+}
+
+.navbar-brand{
+  font-family: "LXGW WenKai TC", cursive;
+  font-size: 35px;
+  color: #08192c;
+  margin-left: 20px;
+}
+
+#offcanvasNavbarLabel {
+  font-family: "IBM Plex Sans KR", sans-serif;
+  font-size: 30px;
+}
+
+
+#loginbox .btn {
+  background-color: transparent;
+  color: #6d757d;
+  border: #f1ece1  1px solid;
+  border-radius: 50px;
+  padding: 8px 20px;
+  transition: 0.3s background-color;
+}
+
+#loginBtn:hover {
+  background-color: #f1ece1;
+  color: #08192c;
+}
+
+#signupbox .btn {
+  background-color: transparent;
+  color: #6d757d;
+  border: #f1ece1  1px solid;
+  border-radius: 50px;
+  padding: 8px 20px;
+  margin: 0px 10px;
+  transition: 0.3s background-color;
+}
+
+#signupbox .btn:hover {
+  background-color: #f1ece1;
+  color: #08192c;
+}
+
+#settingBtn{
+  background-color: transparent;
+  color: #6d757d;
+  border: #f1ece1  1px solid;
+  border-radius: 50px;
+  padding: 8px 20px;
+  margin: 0px 10px;
+  transition: 0.3s background-color;
+}
+#settingBtn:hover{
+  background-color: #f1ece1;
+  color: #08192c;
+}
+
+.navbar-toggler{
+  border: none;
+  font-size: 18px;
+}
+
+.navbar-toggler:focus, .btn-close:focus{
+  box-shadow: none;
+  outline: none;
+}
+
+.nav-link {
+  color: #666777;
+  font-weight: 500;
+  position: relative;
+  margin-left: 10px;
+}
+
+.nav-link:hover, .nav-link.active {
+  color: #08192c;
+ }
+
+.nav-link::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  height: 2px;
+  background-color: #f1ece1;
+  visibility: hidden;
+  transition: 0.3s ease-in-out;
+}
+
+.nav-link:hover::before {
+  visibility: visible;
+  width: 70%;
+}
+
+#userInfo {
+  font-size: 10px;
+}
+
+  
